objects/ProblemCRMSLAs__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is used to set the SLAs for Problem CRM Cases. Numbers are written in Days.</description>
    <fields>
        <fullName>Time_to_Assignment__c</fullName>
        <description>This field sets the SLA for CRM Case Assignment (Owner changed from CRM Case to a user.)</description>
        <label>Time to Assignment</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Close__c</fullName>
        <description>This field sets the SLA for CRM Cases time to closure. Case opened - Case Closed .</description>
        <label>Time to Close</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Resolution__c</fullName>
        <description>This field sets the SLA for time to resolution. (Solution Provided)</description>
        <label>Time to Resolution</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Response__c</fullName>
        <description>This field sets the SLA for time to response.</description>
        <label>Time to Response</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Triage__c</fullName>
        <description>This field sets the SLA for time to triage.</description>
        <label>Time to Triage</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Problem CRM SLAs</label>
</CustomObject>